fixed overflowing

--- a/style.css
+++ b/style.css
@@ -715,6 +715,9 @@ thead tr {
 }
 
 @media screen and (max-width: 768px) {
+  * {
+    overflow-x: hidden !important;
+  }
   header {
     display: block;
   }
